--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       <div class="resume">
         <a
           class="btn round-btn portfolio-btn"
-          href="./files/Muhammed_Nuhman_Resume.pdf"
+          href="https://drive.google.com/file/d/1v-XSPL61TvLUoblHy5u0EJ3jNr12HDPL/view?usp=sharing"
           target="_blank"
           >View Resume</a
         >
@@ -171,7 +171,7 @@
               </a>
               <h4>Face Smart</h4>
             </div>
-            <p>React Express PostgreSQL CSS Clarifai</p>
+            <p>React Express PostgreSQL CSS Clarifai-API Tachyons</p>
           </div>
           <div class="grid-item">
             <a
@@ -195,6 +195,7 @@
               </a>
               <h4>Mapty</h4>
             </div>
+            <p>HTML CSS Javascript</p>
           </div>
           <div class="grid-item">
             <a
@@ -218,7 +219,7 @@
               </a>
               <h4>Robots</h4>
             </div>
-            <p>React RobotAPI</p>
+            <p>React Robot-API</p>
           </div>
           <div class="grid-item">
             <a
@@ -351,7 +352,7 @@
               </button>
               <a
                 class="btn transparent-btn"
-                href="./files/Muhammed_Nuhman_Resume.pdf"
+                href="https://drive.google.com/file/d/1v-XSPL61TvLUoblHy5u0EJ3jNr12HDPL/view?usp=sharing"
                 target="_blank"
                 >View Resume</a
               >
@@ -378,6 +379,5 @@
         ></a>
       </div>
     </div>
-    <script src="./scripts/app.js"></script>
   </body>
 </html>
