Add new subtitle

--- a/index.html
+++ b/index.html
@@ -52,8 +52,13 @@
           </div>
           <div class="intro-subtitle">
             <p>
-              A passionate developer and sometimes designer of internet spaces,
-              I focus on creating beautiful and intuitive user experiences.
+              I enjoy the challenge of learning new things and solving problems.
+              Self-motivated and hard-working person. Seeking to join
+              organizations/companies where I'll be able to apply my skills
+              acquired over years to make a huge difference. I believe the
+              combination of my enthusiastic, reliable, highly motivated, detail
+              oriented, able to work individually or teamwork and adaptable as
+              well as technical skills to make me the ideal candidate.
             </p>
           </div>
           <div class="action-btn-group">
