--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <div class="intro-subtitle">
             <p>
               I enjoy the challenge of learning new things and solving problems.
-              Self-motivated and hard-working person. Seeking to join
+              Self motivated and hard-working person. Seeking to join
               organizations/companies where I'll be able to apply my skills
               acquired over years to make a huge difference. I believe the
               combination of my enthusiastic, reliable, highly motivated, detail
