add oakey dokey farmstead

--- a/index.html
+++ b/index.html
@@ -324,6 +324,34 @@
             </div>
             <p>HTML CSS Javascript</p>
           </div>
+          <div class="grid-item">
+            <a
+              class="wrapping-link"
+              href="https://github.com/Sairoden/Oakey-Dokey-Farmstead"
+              target="_blank"
+            ></a>
+            <div
+              class="grid-item-wrapper"
+              style="
+                background-image: url('./images/oakey-dokey-farmstead.png');
+              "
+            >
+              <div class="grid-item-container">
+                <div class="grid-image-top">
+                  <span class="centered project-image-bg"></span>
+                </div>
+              </div>
+            </div>
+            <div class="github-title">
+              <a
+                href="https://github.com/Sairoden/Oakey-Dokey-Farmstead"
+                target="_blank"
+                ><i class="fab fa-github"></i>
+              </a>
+              <h4>Oakey Dokey Farmstead</h4>
+            </div>
+            <p>HTML CSS Javascript NodeJS</p>
+          </div>
         </div>
       </div>
 
